syntax = "proto3";

option go_package = "github.com/Layr-Labs/eigenda/api/grpc/encoder";
package encoder;

service Encoder {
  rpc EncodeBlob(EncodeBlobRequest) returns (EncodeBlobReply) {}
  rpc RSEncodeBlob(EncodeBlobRequest) returns (RSEncodeBlobReply) {}
}

service RSEncoder {
  rpc RSEncodeBlob(EncodeBlobRequest) returns (RSEncodeBlobReply) {}
}

message RSEncodedFrame {
  bytes coeffs = 1;                // serialized coefficients using your rs.Frame.Serialize()
  uint32 bit_reversed_index = 3;   // ReverseBits(i)
}

message RSEncodeBlobReply {
  repeated RSEncodedFrame frames = 1;
}

// BlobCommitments contains the blob's commitment, degree proof, and the actual degree
// DEPRECATED: use common.BlobCommitment instead
message BlobCommitment {
  bytes commitment = 1;
  bytes length_commitment = 2;
  bytes length_proof = 3;
  uint32 length = 4;
}

// Parameters needed by Encoder for encoding
message EncodingParams {
  uint32 chunk_length = 1;
  uint32 num_chunks = 2;
}

// EncodeBlobRequest contains data and pre-computed encoding params provided to Encoder
message EncodeBlobRequest {
  bytes data = 1;
  EncodingParams encoding_params = 2;
}

enum ChunkEncodingFormat {
	UNKNOWN = 0;
	GNARK = 1;
	GOB = 2;
}

// EncodeBlobReply returns all encoded chunks along with BlobCommitment for the same,
// where Chunk is the smallest unit that is distributed to DA nodes
message EncodeBlobReply {
  BlobCommitment commitment = 1;
  repeated bytes chunks = 2;
  // How the above chunks are encoded.
  ChunkEncodingFormat chunk_encoding_format = 3;
}
